<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_name" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/et_name" />

            <TextView
                android:id="@+id/tvMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_mobile" />

            <EditText
                android:id="@+id/etMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1        "
                android:ems="10"
                android:inputType="phone"
                android:text="@string/et_mobile" />

            <TextView
                android:id="@+id/tvPax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_pax" />

            <EditText
                android:id="@+id/etPax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:text="@string/et_pax" />

            <CheckBox
                android:id="@+id/cbSmoking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cb_smoking" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <DatePicker
                        android:id="@+id/dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:calendarViewShown="false"
                        android:datePickerMode="spinner" />

                    <TimePicker
                        android:id="@+id/tp"
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:timePickerMode="spinner" />
                </LinearLayout>
            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_submit" />

                <Button
                    android:id="@+id/btnReset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_reset" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>